Revise media objects and fix inconsistency with enforcing aspect ratio cropping.

--- a/documentation/css/scpr-style.css
+++ b/documentation/css/scpr-style.css
@@ -786,6 +786,11 @@ button {
       position: absolute;
       top: 0.5em;
       width: .375rem; }
+  .c-list--bullet-light > *:before {
+    background-color: #E8E8E8; }
+  @media (min-width: 56rem) {
+    .c-list--bullet-offset {
+      padding: 0; } }
 
 .c-well {
   background: #F6F6F6;
@@ -919,12 +924,26 @@ button {
     display: block;
     overflow: hidden;
     position: relative;
-    width: 100%; }
+    width: 100%;
+    float: left;
+    max-width: 100%; }
+    .o-media__figure--cinematic {
+      padding-top: 42.55319%; }
+    .o-media__figure--four-by-three {
+      padding-top: 75.00019%; }
+    .o-media__figure--widescreen {
+      padding-top: 56.24993%; }
     .o-media__figure::before {
       box-sizing: border-box;
       content: "";
       display: block;
       position: relative; }
+  .o-media [class*='o-media__figure--'] .o-media__img {
+    box-sizing: border-box;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%); }
   .o-media__related-content {
     border-top: 2px solid #fef1e7;
     margin: 1.875rem 0 0;
@@ -935,10 +954,6 @@ button {
     .o-media__related-content > .heading {
       text-transform: uppercase;
       margin-bottom: 1.375rem; }
-    .o-media__related-content .c-list--bullet {
-      padding: 0; }
-      .o-media__related-content .c-list--bullet li:before {
-        background-color: #E8E8E8; }
   .o-media__meta {
     display: block;
     margin: 1rem 0 0.25rem; }
@@ -963,18 +978,21 @@ button {
         .o-media__headline--h1-verbose {
           font-size: 2.3328rem; } }
     .o-media__headline--h2 {
-      font-size: 2.3328rem;
+      font-size: 2.79936rem;
       font-weight: 800; }
     .o-media__headline--h3 {
-      font-size: 1.944rem;
+      font-size: 2.3328rem;
       line-height: 1.22222em; }
+      @media (max-width: 30rem) {
+        .o-media__headline--h3 {
+          font-size: 1.944rem; } }
     .o-media__headline--h4 {
       font-family: "franklin-gothic-urw", "Avenir Next", "Avenir", Arial, sans-serif;
       font-size: 1.35rem;
       line-height: 1.22222em; }
     .o-media__headline--h5 {
       font-family: "franklin-gothic-urw", "Avenir Next", "Avenir", Arial, sans-serif;
-      font-size: 1.125rem;
+      font-size: 1.35rem;
       line-height: 1.22222em; }
   .o-media__headline-link {
     position: relative; }
@@ -1004,9 +1022,9 @@ button {
     .o-media__entityTitle--small {
       font-size: 0.78125rem; }
   .o-media__overline {
-    color: #F87E21;
+    color: #31ABD4;
     display: block;
-    font-size: 0.9375rem;
+    font-size: 1.125rem;
     font-weight: 500;
     margin: 0 0 0.5rem;
     text-transform: uppercase; }
@@ -1030,15 +1048,15 @@ button {
     text-transform: uppercase; }
   .o-media__dek {
     color: #898989;
-    font-size: 1.125rem;
+    font-size: 1.35rem;
     line-height: 1.47059em;
     margin-bottom: 1em; }
   .o-media__teaser {
     color: #363636;
-    font-size: 0.9375rem;
+    font-size: 1.125rem;
     line-height: 1.66667em; }
     .o-media__teaser > * {
-      font-size: 0.9375rem;
+      font-size: 1.125rem;
       line-height: 1.66667em; }
     .o-media__teaser--small {
       font-size: 0.78125rem; }
@@ -1065,11 +1083,20 @@ button {
   position: relative; }
   .o-media--med .o-media__figure {
     margin-bottom: 1.375rem; }
+    @media (min-width: 56rem) {
+      .o-media--med .o-media__figure {
+        margin-right: 3.125rem;
+        float: left;
+        max-width: 35.817%; }
+        .o-media--med .o-media__figure--cinematic {
+          padding-top: 15.24128%; }
+        .o-media--med .o-media__figure--four-by-three {
+          padding-top: 26.86282%; }
+        .o-media--med .o-media__figure--widescreen {
+          padding-top: 20.14704%; } }
   @media (max-width: 56rem) {
     .o-media--med {
       border-top: 1px solid #E8E8E8;
-      box-shadow: none;
-      padding-left: 0;
       display: flex;
       flex-direction: column; }
       .o-media--med .o-media__figure {
@@ -1078,23 +1105,6 @@ button {
         .o-media--med .o-media__figure .o-media__img {
           margin: 0 auto;
           width: 100%; } }
-  @media (min-width: 56rem) {
-    .o-media--med [class*='o-media__figure--'] .o-media__img {
-      box-sizing: border-box;
-      left: 50%;
-      position: absolute;
-      top: 50%;
-      transform: translate(-50%, -50%); }
-    .o-media--med .o-media__figure {
-      margin-right: 3.125rem;
-      float: left;
-      max-width: 18.625rem; }
-    .o-media--med .o-media__figure--cinematic {
-      height: 7.92553rem; }
-    .o-media--med .o-media__figure--four-by-three {
-      height: 13.96878rem; }
-    .o-media--med .o-media__figure--widescreen {
-      height: 10.47655rem; } }
 
 .o-media--lg {
   margin-top: 1.875rem; }
@@ -1106,11 +1116,8 @@ button {
       width: 100%; } }
   .o-media--lg .o-media__figure {
     border-bottom: 6px solid #D15904;
-    width: auto;
+    width: 100%;
     margin-bottom: 2.5rem; }
-    @media (max-width: 30rem) {
-      .o-media--lg .o-media__figure {
-        margin: 0 -1.58371%; } }
   .o-media--lg > .o-media__headline {
     margin: 0 0 1.875rem; }
   .o-media--lg .o-media__label {
@@ -1145,8 +1152,6 @@ button {
   margin: 0 0 1.875rem; }
 .o-media--new-and-unread > .o-media__label {
   font-size: 0.78125rem; }
-.o-media--new-and-unread .o-media__overline {
-  color: #31ABD4; }
 .o-media--new-and-unread .o-media__related-content {
   margin-left: -2rem;
   padding-left: 2rem;
