--- a/src/css/objects/_media.scss
+++ b/src/css/objects/_media.scss
@@ -30,13 +30,38 @@
     display: block;
     overflow: hidden;
     position: relative;
-    width: 100%;
+    $width: 100%;
+    width: $width;
+    float: left;
+    max-width: $width;
+
+    &--cinematic {
+      padding-top: $width / 2.35;
+    }
+
+    &--four-by-three {
+      padding-top: $width / 1.33333;
+    }
+
+    &--widescreen {
+      padding-top: $width / 1.77778;
+    }
 
     &::before {
       box-sizing: border-box;
       content: "";
       display: block;
       position: relative;
+    }
+  }
+
+  [class*='o-media__figure--'] {
+    .o-media__img {
+      box-sizing: border-box;
+      left: 50%;
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -53,17 +78,6 @@
     > .heading {
       text-transform: uppercase;
       margin-bottom: 1.375rem;
-    }
-
-    .c-list--bullet {
-      padding: 0;
-
-      li {
-        &:before {
-          //NOTE: Maybe add this to _lists?
-          background-color: $color-gray-light;
-        }
-      }
     }
   }
 
@@ -102,12 +116,15 @@
     }
 
     &--h2 {
-      font-size: ms(4);
+      font-size: ms(5);
       font-weight: 800;
     }
 
     &--h3 {
-      font-size: ms(3);
+      font-size: ms(4);
+      @include media-max($media-mobile) {
+        font-size: ms(3);
+      }
       line-height: 1.22222em;
     }
 
@@ -119,7 +136,7 @@
 
     &--h5 {
       font-family: $font-sans-base;
-      font-size: ms(0);
+      font-size: ms(1);
       line-height: 1.22222em;
     }
   }
@@ -166,9 +183,9 @@
   }
 
   &__overline {
-    color: $color-primary;
+    color: $color-secondary;
     display: block;
-    font-size: ms(-1);
+    font-size: ms(0);
     font-weight: 500;
     margin: 0 0 0.5rem;
     text-transform: uppercase;
@@ -202,18 +219,18 @@
 
   &__dek {
     color: $color-gray;
-    font-size: ms(0);
+    font-size: ms(1);
     line-height: 1.47059em;
     margin-bottom: 1em;
   }
 
   &__teaser {
     color: $color-gray-dark;
-    font-size: ms(-1);
+    font-size: ms(0);
     line-height: 1.66667em;
 
     & > * {
-      font-size: ms(-1);
+      font-size: ms(0);
       line-height: 1.66667em;
     }
 
@@ -259,21 +276,32 @@
 }
 
 .o-media--med {
-  // box-shadow: inset 17rem 0 0 $color-gray-lightest;
-  // padding: $base-line-height 0 $base-line-height 19rem;
   position: relative;
-
-  //NOTE: Re-add the following padding as part of the CSS specific to the homepage rather than here.
-  // padding-top: 4.25rem
 
   .o-media__figure {
     margin-bottom: 1.375rem;    
+    @include media-min($media-tablet){
+      $width: 35.817%;
+      margin-right: 3.125rem;
+      float: left;
+      max-width: $width;
+
+      &--cinematic {
+        padding-top: $width / 2.35;
+      }
+
+      &--four-by-three {
+        padding-top: $width / 1.33333;
+      }
+
+      &--widescreen {
+        padding-top: $width / 1.77778;
+      }
+    }
   }
 
   @include media-max($media-tablet) {
     border-top: 1px solid $color-gray-light;
-    box-shadow: none;
-    padding-left: 0;
 
     // If flex is available, and we are on mobile,
     // use this to position the figure before the 
@@ -291,47 +319,12 @@
 
   }
 
-  @include media-min($media-tablet){
-    $width: 18.625rem;
-
-    [class*='o-media__figure--'] {
-      .o-media__img {
-        box-sizing: border-box;
-        left: 50%;
-        position: absolute;
-        top: 50%;
-        transform: translate(-50%, -50%);
-      }
-    }
-
-    .o-media__figure {
-      margin-right: 3.125rem;
-      float: left;
-      max-width: $width;
-    }
-
-    .o-media__figure--cinematic {
-      height: $width / 2.35;
-    }
-
-    .o-media__figure--four-by-three {
-      height: $width / 1.33333;
-    }
-
-    .o-media__figure--widescreen {
-      height: $width / 1.77778;
-    }
-  }
-
 }
 
 .o-media--lg {
   margin-top: $base-line-height;
 
   > .o-media__content {
-    // box-shadow: inset 17rem 0 0 $color-gray-lightest;
-    // padding: $base-line-height 0 ($base-line-height * 2) 19rem;
-
     @include media-max($media-tablet) {
       box-shadow: none;
       padding-left: 0;
@@ -342,14 +335,8 @@
 
   .o-media__figure {
     border-bottom: 6px solid $color-primary-alt;
-
-    // margin: 0 ($gutter * -1) //NOTE: Unclear why we need this.
-    width: auto;
+    width: 100%;
     margin-bottom: 2.5rem;
-
-    @include media-max($media-mobile) {
-      margin: 0 ($gutter / -2);
-    }
   }
 
   > .o-media__headline {
@@ -402,36 +389,12 @@
     display: none;
   }
 
-  //NOTE: Not sure why I commented this out, but it doesn't appear to do anything now.
-  // &::after
-  //   border-top: 2px solid $color-gray-lightest
-  //   content: ''
-  //   display: block
-
-  //   //NOTE: Was 17rem
-  //   left: 0
-  //   position: absolute
-  //   right: 0
-  //   top: 0
-
-  //   +media-max($media-tablet)
-  //     display: none
-
-  //NOTE: Not clear why we would need to only apply this to new/unread
-  // > .o-media__figure {
-  //   margin: 0 0 $base-line-height;
-  // }
-
   > .o-media__headline {
     margin: 0 0 $base-line-height;
   }
 
   > .o-media__label {
     font-size: ms(-2);
-  }
-
-  .o-media__overline {
-    color: $color-secondary;
   }
 
   .o-media__related-content {
